syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

import "api/domain/common/messages.proto";

option go_package = "gitlab.figo.systems/platform/monoskope/monoskope/pkg/api/domain/commands";

package commands;

message CreateUserCommand {
  // The user information
  common.UserMetadata user_metadata = 1;
}

message CreateUserRoleBindingCommand {
  // Unique identifier of the user (UUID 128-bit number)
  string user_id = 1;
  // Name of the role to add
  string role = 2;
  // Scope of the role
  string scope = 3;
  // Affected resource within scope
  string resource = 4;
}
